[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Opponent/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Level.gd" type="Script" id=4]
[ext_resource path="res://Assets/PoetsenOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/reset.png" type="Texture" id=7]
[ext_resource path="res://Assets/LogoMakr-9WSrPV.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 359 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
custom_colors/font_color = Color( 0.807843, 0.945098, 0.85098, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
custom_colors/font_color = Color( 0.807843, 0.945098, 0.85098, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -50.0
custom_colors/font_color = Color( 0.807843, 0.945098, 0.85098, 1 )
custom_fonts/font = SubResource( 5 )
text = "0 : 59"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDownLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 100.0
custom_colors/font_color = Color( 0.807843, 0.945098, 0.85098, 1 )
custom_fonts/font = SubResource( 5 )
text = "Count Down"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1135, 300 )
scale = Vector2( 1, 1.5 )

[node name="WallTop" type="StaticBody2D" parent="."]
scale = Vector2( 1.25, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 512, -10.5 )
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2( 0, 741 )
scale = Vector2( 1.25, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 512, -10.5 )
shape = SubResource( 1 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 140, 300 )
scale = Vector2( 1, 1.5 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 360 )

[node name="Left" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -10, 360 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 1303, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( -10, 360 )
shape = SubResource( 2 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="Reset" type="Button" parent="."]
anchor_right = 0.053
anchor_bottom = 0.072
margin_left = 605.0
margin_top = 19.0
margin_right = 615.16
margin_bottom = 38.16
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoMakr-9wsrPv" type="Sprite" parent="."]
position = Vector2( 68, 61 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
